# apps/api/src/students/students.module.ts
@@ -1,10 +1,11 @@
 import { Module } from "@nestjs/common";
 import { DatabaseModule } from "../database/database.module";
+import { StudentAccessModule } from "../student-access/student-access.module";
 import { StudentsController } from "./students.controller";
 import { StudentsService } from "./students.service";
 
 @Module({
-  imports: [DatabaseModule],
+  imports: [DatabaseModule, StudentAccessModule],
   controllers: [StudentsController],
   providers: [StudentsService],
 })
